fix form overflow

--- a/src/components/ImageInput/styles.module.scss
+++ b/src/components/ImageInput/styles.module.scss
@@ -1,7 +1,7 @@
 .imageInput {
   background-color: rgba(#2d88ff, 0.1);
   height: 300px;
-  width: 430px;
+  width: 100%;
   border-radius: 4px;
   overflow: hidden;
   border: 2px dotted #e0e0e0;
