--- a/src/forms/NewMemoryForm/styles.module.scss
+++ b/src/forms/NewMemoryForm/styles.module.scss
@@ -5,6 +5,8 @@
   display: flex;
   flex-direction: column;
   gap: 16px;
+  width: 100%;
+  max-width: 500px;
 
   h2 {
     color: #2d88ff;
